bin_PROGRAMS = psps
psps_SOURCES = basic_stats.c calibr.c least_squares.c main.c options.c perc_stats.c precalibr.c state.c
psps_LDFLAGS = -lrt -lm
psps_LDADD = ../common/libpspcommon.la
noinst_HEADERS = basic_stats.h calibr.h least_squares.h options.h perc_stats.h precalibr.h state.h ts_handler.h

